--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="sponsor"><img src="images/sponsors/figma.png" alt=""></div>
         </div>
     </section>
-    <footer class="container">
+    <footer>
         <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 
