--- a/index.html
+++ b/index.html
@@ -118,6 +118,22 @@
             </div>
         </div>
     </section>
+
+    <section class="part-4 container" style="margin-top: 40px;">
+        <div class="part4-title">
+            <h2>About Us</h2>
+            <p class="mobile-about-us" style="text-align: justify;">
+                G3 Architecture is a leading IT company that specializes in providing innovative and cutting-edge technology solutions to businesses of all sizes. We have a team of highly skilled and experienced professionals who are dedicated to helping our clients stay ahead of the curve in today's fast-paced digital landscape.
+
+                Our services include website development, software development, cloud computing, data analytics, cybersecurity, and more. We work closely with our clients to understand their unique needs and goals, and we tailor our solutions to fit those needs perfectly.
+
+                At G3 Architecture, we are committed to delivering the highest quality services and products to our clients. We take pride in our ability to stay on top of the latest trends and technologies, and we are always looking for ways to improve and evolve our offerings.
+
+                If you're looking for a partner that can help you stay competitive in today's digital world, look no further than G3 Architecture. Contact us today to learn more about how we can help you achieve your goals.
+            </p>
+        </div>
+    </section>
+
     <section class="sponsors container">
         <div class="sponsor-title">
             <h2>Our Sponsor</h2>
