--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <div class="container">
                 <h2 class="banner-title">Band New<br>Group of Architects</h2>
                 <p class="banner-p">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have
-                    suffered alteration in<br>some form, by injected humour, or randomised words which don't look even
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <button>Explore More</button>
                 <img src="images/banner.png" alt="" class="banner-img">
